--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<h1> My name is Sean. </h1>
+
+<!--<p> The quick brown fox jumps over the lazy dog.</p>-->
+
+<p><img src="2003 07 21_my family_2.jpg" width=500></p>
+
+<p> Some stuff I like:
+<ul>
+<li><a href=http://www.runescape.com> my favorite website </a></li>
+<li><a href=2008Pictures_Of_Earth.pps> cool pictures </a></li>
+</ul></p>
+
+
+<!-- Anything between these marks is hidden from the browser. -->
+
+<!-- <h2> HTML Tutorial </h2>
+
+<h3> Anything between the "h-series" brackets is interpreted as a header.</h3>
+<p> H1 is the biggest header.  H6 is the smallest. </p>
+
+<p> The "p" brackets mark a paragraph.</p>
+
+<p> A line-break looks like <br> this.</p>
+
+<p> To make a list with bullets (an "unordered list"), use the "ul" and "li" (list item) brackets.</p>
+<ul>
+<li> Item 1 </li>
+<li> Item 2 </li>
+</ul>
+
+<p> To get numbers instead of bullets, use "ol" for "ordered list" instead.</p>
+
+<p> To make a link, start with <a href=link> alias </a>. </p>
+
+ -->
